tools/custom-metrics-api-istio/custom-metrics-apiserver-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: custom-metrics-apiserver
    version: v1
  name: custom-metrics-apiserver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-metrics-apiserver
      version: v1
  template:
    metadata:
      labels:
        app: custom-metrics-apiserver
        version: v1
      name: custom-metrics-apiserver
    spec:
      serviceAccountName: custom-metrics-apiserver
      containers:
      - name: custom-metrics-apiserver
        image: directxman12/k8s-prometheus-adapter-amd64
        args:
        - --secure-port=6443
        - --tls-cert-file=/var/run/serving-cert/serving.crt
        - --tls-private-key-file=/var/run/serving-cert/serving.key
        - --logtostderr=true
        - --prometheus-url=http://prometheus.istio-system.svc:9090/
        - --metrics-relist-interval=30s
        - --v=10
        - --config=/etc/adapter/config.yaml
        ports:
        - containerPort: 6443
        volumeMounts:
        - mountPath: /var/run/serving-cert
          name: volume-serving-cert
          readOnly: true
        - mountPath: /etc/adapter/
          name: config
          readOnly: true
        - mountPath: /tmp
          name: tmp-vol
      volumes:
      - name: config
        configMap:
          name: adapter-config
      - name: tmp-vol
        emptyDir: {}
      - name: volume-serving-cert
        secret:
          secretName: cm-adapter-serving-certs
      nodeSelector:
        kops.k8s.io/instancegroup: monitoring
