tools/custom-metrics-api-istio/custom-metrics-apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-metrics-apiserver
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 6443
    name: http
  selector:
    app: custom-metrics-apiserver
