tools/custom-metrics-api-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: custom-metrics-apiserver
spec:
  hosts:
  - custom-metrics-apiserver
  http:
  - route:
    - destination:
        host: custom-metrics-apiserver
